style.css
/* ... */
.scroll-icon {
  opacity: 0.4;
  position: absolute;
  margin: auto;
  left: 0;
  right: 0;
  bottom: 70px;
  z-index: 5;
  text-align: center;
}

.scroll-icon .mouse {
  margin: auto;
  width: 20px;
  height: 50px;
  border: 1px solid white;
  border-radius: 60px;
}

.scroll-icon .mouse::before {
  content: '';
  width: 5px;
  height: 5px;
  position: absolute;
  top: 10px;
  left: 50%;
  -webkit-transform: translateX(-50%);
          transform: translateX(-50%);
  background-color: white;
  border-radius: 50%;
  opacity: 1;
  animation: wheel 2s infinite;
  -webkit-animation: wheel 2s infinite;
}

.scroll-icon span {
  font-size: 12px;
  letter-spacing: 5px;
}

@keyframes wheel {
  to {
    opacity: 0;
    top: 40px;
  }
}

@-webkit-keyframes wheel {
  to {
    opacity: 0;
    top: 60px;
  }
}

/* Styles from the GreenSock website */
.gs_reveal {
  opacity: 0;
  visibility: hidden;
  will-change: transform, opacity;
}

.transition-fade {
  -webkit-transition: 0.4s;
  transition: 0.4s;
  opacity: 1;
}

html.is-animating .transition-fade {
  opacity: 0;
}

.mobile-hero {
  position: relative;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

.mobile-hero video {
  width: 100vw;
  min-height: 100vh;
  -o-object-fit: cover;
     object-fit: cover;
  top: 0;
  left: 0;
  z-index: 1;
}

.mobile-hero .overlay {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.3) 50%, rgba(0, 0, 0, 0.5) 50%);
  background-size: 3px 3px;
  z-index: 2;
}

.mobile-hero .main-wrapper img {
  position: absolute;
  text-align: center;
  z-index: 3;
  top: 250px;
  left: 0;
  right: 0;
  margin: auto;
  width: 60%;
  height: auto;
}

.mobile-hero .main-desc {
  margin: auto;
  bottom: 150px;
  left: 0;
  text-align: center;
  color: #fff;
  position: absolute;
  z-index: 2;
  width: 100%;
}

.top-profile-mb {
  position: relative;
  width: 100%;
  height: 100%;
  background: url("img/bg-profile.jpg") no-repeat center;
  background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-attachment: fixed;
  -webkit-background-attachment: fixed;
  -moz-background-attachment: fixed;
  -o-background-attachment: fixed;
  padding: 50px 0;
  z-index: 1;
}

.top-profile-mb:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background: -webkit-gradient(linear, left top, left bottom, color-stop(10%, rgba(0, 0, 0, 0.3)), to(black));
  background: linear-gradient(-180deg, rgba(0, 0, 0, 0.3) 10%, black 100%);
  z-index: -1;
}

.top-profile-mb h2 {
  margin: 0;
}

.mov-suit {
  padding-top: 150px;
  position: relative;
  overflow: hidden;
  width: 100%;
  margin: 0;
  background: url("img/hangersuit.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  z-index: 1;
}

.mov-suit::before {
  content: "";
  position: absolute;
  width: 100%;
  top: 0;
  left: 0;
  height: 100%;
  z-index: -1;
  background: linear-gradient(299deg, rgba(0, 31, 61, 0) 10%, rgba(0, 31, 61, 0) 30%, rgba(0, 31, 61, 0.9) 70%, #002E59 100%);
}

.mov-suit a {
  color: #fff;
}

.mov-suit .circle_bg {
  position: absolute;
  background: url("/img/mov-icon.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: -350px -150px;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  opacity: 0.5;
  z-index: -1;
}

.mov-suit .suit-icon {
  width: 100px;
  height: 100px;
  border: 2px solid #FEB404;
  border-radius: 50%;
}

.mov-suit .suit-specs img.suit {
  width: 75px;
}

.mov-suit .suit-specs img.table-size {
  -o-object-fit: cover;
     object-fit: cover;
  width: 80%;
  height: auto;
}

.mov-suit .hero-wrapper {
  position: absolute;
  width: 50%;
  height: 100%;
  top: 0;
}

.mov-suit .hero-wrapper .img_right {
  background: url("img/Movsuit.png") no-repeat;
  background-size: cover;
  width: 100%;
  height: 100%;
  top: 0;
}

.mov-suit .movsuitHero {
  position: relative;
  width: 100%;
  z-index: -1;
}

.mov-suit #suit_guide {
  margin-top: 50px;
}

.mov-suit #suit_guide img {
  width: 100%;
  height: 100%;
}

.mov-suit .modal-overlay {
  opacity: 0.7 !important;
}

@media (max-width: 420px) {
  .movsuitHero {
    margin-top: -130px;
    margin-bottom: -180px;
    width: 150% !important;
    -webkit-transform: translateX(-15%);
            transform: translateX(-15%);
  }
  .mov-suit .circle_bg {
    top: 50px !important;
    width: 100% !important;
    height: 40% !important;
    background-position: -90px !important;
  }
}

@media only screen and (min-width: 421px) and (max-width: 600px) {
  .movsuitHero {
    margin-top: -130px;
    margin-bottom: -180px;
    width: 120% !important;
    -webkit-transform: translateX(-10%);
            transform: translateX(-10%);
  }
  .mov-suit .circle_bg {
    top: 50px !important;
    width: 100% !important;
    height: 40% !important;
    background-position: -90px !important;
  }
}

@media only screen and (min-width: 601px) and (max-width: 767px) {
  .hero-wrapper .img_right {
    background-position-x: -100px !important;
  }
}

@media only screen and (min-width: 768px) and (max-width: 991px) {
  img.suit {
    width: 55px !important;
  }
  .hero-wrapper .img_right {
    background-position-x: -100px !important;
  }
}

@media only screen and (max-width: 438px) {
  img.suit {
    width: 55px !important;
  }
}

.mov-g {
  padding-top: 150px;
  position: relative;
  overflow: hidden;
  width: 100%;
  margin: 0;
  background: url("img/gloves.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position-x: 400px;
}
/* ... */

